# Alice

./: .gitignore  LICENSE  robotdesc.txt  running_commands.txt
docker/: Dockerfile  docker_run.sh  join_alice.bat  run_alice.bat
src/alice_control/: CMakeLists.txt  package.xml
src/alice_control/include/alice_control/: dk.hpp  ik.hpp  parallel_ik.hpp
src/alice_control/src/: dk.cpp  ik.cpp  parallel_ik.cpp  test_dk.cpp  test_ik.cpp
src/alice_control/src/tests/: joint_state_publisher_node.cpp  test_ik.cpp
src/alice_description/: CMakeLists.txt  dimensions.py  dk.py  dk_visualizer.py  knee_feet.py  package.xml
src/alice_description/config/: joint_names_alice_description.yaml
src/alice_description/launch/: display.launch  gazebo.launch
src/alice_description/meshes/: head.STL  l_arm.STL  l_arm_atuador.STL  l_arm_hand.STL  l_arm_haste.STL  l_back_down_leg_bar.STL  l_back_up_leg_bar.STL  l_l_bottom_bottom_actuator_lig.STL  l_l_bottom_up_actuator_lig.STL  l_l_down_leg_actuator.STL  l_l_down_leg_haste.STL  l_l_front_down_leg_bar.STL  l_l_front_up_leg_bar.STL  l_l_up_bottom_actuator_lig.STL  l_l_up_leg_atuador.STL  l_l_up_leg_haste.STL  l_l_up_up_actuator_lig.STL  l_leg_bottom.STL  l_leg_foot.STL  l_leg_middle.STL  l_leg_top.STL  l_r_bottom_bottom_actuator_lig.STL  l_r_bottom_up_actuator_lig.STL  l_r_down_leg_actuator.STL  l_r_down_leg_haste.STL  l_r_front_down_leg_bar.STL  l_r_front_up_leg_bar.STL  l_r_up_bottom_actuator_lig.STL  l_r_up_leg_atuador.STL  l_r_up_leg_haste.STL  l_r_up_up_actuator_lig.STL  r_arm.STL  r_arm_atuador.STL  r_arm_hand.STL  r_arm_haste.STL  r_back_down_leg_bar.STL  r_back_up_leg_bar.STL  r_l_bottom_bottom_actuator_lig.STL  r_l_bottom_up_actuator_lig.STL  r_l_down_leg_actuator.STL  (+21 more)
src/alice_description/urdf/: alice_description.csv  alice_description.urdf
src/alice_xacro_desc/: CMakeLists.txt  dk.py  ik.py  knee_feet.py
src/alice_xacro_desc/launch/: display.launch.py  gazebo.launch.py
src/alice_xacro_desc/meshes/: back_leg.stl  dn_actuator.stl  dn_ankle.stl  foot.STL  front_dn_l.STL  front_dn_r.STL  front_up_r.stl  head2.stl  knee.STL  larm1.stl  larm2.stl  rarm1.stl  rarm2.stl  up_actuator.STL  up_femur.STL  up_haste.stl  up_haste_lig.stl
src/alice_xacro_desc/rviz/: display.rviz
src/alice_xacro_desc/urdf/: arms.xacro  center_leg.xacro  dn_act_segment.xacro  head.xacro  leg.xacro  robot.urdf.xacro  up_act_segment.xacro
src/install/: local_setup.sh  setup.sh
src/install/alice_xacro_desc/share/alice_xacro_desc/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/install/alice_xacro_desc/share/alice_xacro_desc/cmake/: alice_xacro_descConfig.cmake
src/install/alice_xacro_desc/share/alice_xacro_desc/launch/: display.launch.py  gazeo.launch.py
src/install/alice_xacro_desc/share/alice_xacro_desc/meshes/: back_leg.STL  dn_actuator.STL  dn_actuator_lig.STL  dn_ankle.STL  dn_haste.STL  dn_haste_lig.STL  foot.STL  front_dn_l.STL  front_dn_r.STL  front_up_l.STL  front_up_r.STL  knee.STL  up_actuator.STL  up_actuator_lig.STL  up_femur.STL  up_haste.STL  up_haste_lig.STL
src/install/alice_xacro_desc/share/alice_xacro_desc/urdf/: arms.xacro  center_leg.xacro  dn_act_segment.xacro  head.xacro  robot.urdf.xacro  up_act_segment.xacro
src/install/alice_xacro_desc/share/ament_index/resource_index/parent_prefix_path/: alice_xacro_desc
test_scripts/: dimensions.py  dk.py  dk_visualizer.py
