<package format="2">
  <name>alice_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for Alice Humanoid Robot</p>
    <p>This package contains configuration data, 3D models and launch files
for Alice Humanoid Robot</p>
  </description>
  <author>Pedro Henrique Afonso</author>
  <maintainer email="pedrohafonso08@ufu.br" />
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>